Trying out a proxy server for the clickable detector

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -60,5 +60,6 @@
 
 	<modules>
 		<module>crawloverview-plugin</module>
-	</modules>
+        <module>clickable-detector</module>
+    </modules>
 </project>
